maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:55: error: value North is not a member of object plm.universe.Direction
	setDirection(Direction.North)
                               ^Escaper:59: error: type mismatch;
 found   : Unit
 required: Boolean
	do {keepHandOnSideWall()} while (sommeAngle = 0)
                                                    ^